--- a/YoursMine/YoursMine/니꺼사기/Cells/AuctionListCell.xib
+++ b/YoursMine/YoursMine/니꺼사기/Cells/AuctionListCell.xib
@@ -21,7 +21,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="423" height="130"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jym-Vs-hXy">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jym-Vs-hXy">
                         <rect key="frame" x="15" y="10" width="120" height="110"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="120" id="rnv-RY-6PD"/>
