--- a/YoursMine/YoursMine/니꺼사기/ItemListCell.xib
+++ b/YoursMine/YoursMine/니꺼사기/ItemListCell.xib
@@ -27,10 +27,11 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ww-Mq-8G9">
                         <rect key="frame" x="0.0" y="0.0" width="409" height="121"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="agm-tE-Dd3">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="agm-tE-Dd3">
                                 <rect key="frame" x="15" y="10" width="80" height="101"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="5zy-mj-zdv"/>
+                                    <constraint firstAttribute="width" secondItem="agm-tE-Dd3" secondAttribute="height" multiplier="80:101" id="cmf-Un-55e"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lsq-mc-2Id">
