--- a/YoursMine/YoursMine/니꺼사기/BuyingTab.storyboard
+++ b/YoursMine/YoursMine/니꺼사기/BuyingTab.storyboard
@@ -31,14 +31,14 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x4c-KD-mvo">
                                         <rect key="frame" x="0.0" y="0.0" width="120" height="60"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="명동 사옥" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MNL-7a-Oc2">
-                                                <rect key="frame" x="15" y="10" width="67.5" height="40"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="명동" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MNL-7a-Oc2">
+                                                <rect key="frame" x="15" y="10" width="31.5" height="40"/>
                                                 <fontDescription key="fontDescription" name="NanumBarunGothicBold" family="NanumBarunGothic" pointSize="18"/>
                                                 <color key="textColor" red="0.37254901960784315" green="0.24705882352941178" blue="0.13725490196078433" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowtriangle.down.square" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="gBx-Ci-Zdc">
-                                                <rect key="frame" x="90.5" y="21" width="19.5" height="17.5"/>
+                                                <rect key="frame" x="54.5" y="21" width="19.5" height="17.5"/>
                                                 <color key="tintColor" name="TextColor"/>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H1i-dL-LsP">
@@ -220,6 +220,7 @@
                     <navigationItem key="navigationItem" id="B7s-1f-KhX"/>
                     <connections>
                         <outlet property="categoryCollectionView" destination="mYL-Yb-iX4" id="2Jb-ha-2bI"/>
+                        <outlet property="locationLabel" destination="MNL-7a-Oc2" id="WRQ-Y2-Lyo"/>
                         <outlet property="pickerContainerView" destination="8Aw-Km-lqD" id="Yja-yX-RKI"/>
                         <outlet property="pickerView" destination="4cL-7I-eCp" id="mdz-Hu-Pfl"/>
                         <outlet property="searchView" destination="R0L-lq-FIg" id="bU0-eU-H02"/>
@@ -298,6 +299,9 @@
                                     <state key="normal" title="변경">
                                         <color key="titleColor" name="DarkBrown"/>
                                     </state>
+                                    <connections>
+                                        <action selector="pickerChangeButtonTapped:" destination="TW1-xz-aDB" eventType="touchUpInside" id="bga-9f-Jb6"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" name="PointYellowColor"/>
