--- a/YoursMine/YoursMine/니꺼사기/Cells/LessonsListCell.xib
+++ b/YoursMine/YoursMine/니꺼사기/Cells/LessonsListCell.xib
@@ -32,13 +32,13 @@
                                 <rect key="frame" x="0.0" y="0.0" width="100" height="25"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="마감임박" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2fQ-nY-v89">
-                                        <rect key="frame" x="15" y="5" width="45" height="15.5"/>
+                                        <rect key="frame" x="15" y="5" width="46.5" height="15"/>
                                         <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="13"/>
                                         <color key="textColor" red="0.79420358940000002" green="0.30957214910000003" blue="0.2907174716" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="2fQ-nY-v89" firstAttribute="leading" secondItem="thf-CE-BQ6" secondAttribute="leading" constant="15" id="RDA-PJ-l5K"/>
                                     <constraint firstItem="2fQ-nY-v89" firstAttribute="centerY" secondItem="thf-CE-BQ6" secondAttribute="centerY" id="dhH-8D-Fue"/>
@@ -55,7 +55,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="6je-X4-Roo" firstAttribute="top" secondItem="Mcl-dQ-B5r" secondAttribute="top" constant="7" id="MzI-0h-hjl"/>
                                     <constraint firstItem="6je-X4-Roo" firstAttribute="leading" secondItem="Mcl-dQ-B5r" secondAttribute="leading" constant="15" id="dxJ-OW-hob"/>
@@ -64,6 +64,7 @@
                                 </constraints>
                             </view>
                         </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="3S4-yd-4Dm"/>
                         </constraints>
@@ -81,13 +82,13 @@
                                 <rect key="frame" x="15" y="31.5" width="195" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="하나은행" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wND-az-DAv">
-                                        <rect key="frame" x="0.0" y="0.0" width="38.5" height="20"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="39.5" height="20"/>
                                         <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="11"/>
                                         <color key="textColor" name="TextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Robert" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1fn-iL-YJN">
-                                        <rect key="frame" x="46.5" y="3.5" width="33.5" height="13"/>
+                                        <rect key="frame" x="47.5" y="3.5" width="34" height="13"/>
                                         <fontDescription key="fontDescription" name="NanumBarunGothic" family="NanumBarunGothic" pointSize="11"/>
                                         <color key="textColor" name="TextColor"/>
                                         <nil key="highlightedColor"/>
@@ -190,7 +191,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="KcR-b4-auT" secondAttribute="trailing" constant="15" id="0Fb-zt-zkH"/>
                             <constraint firstItem="3WI-aT-K7i" firstAttribute="leading" secondItem="KcR-b4-auT" secondAttribute="leading" constant="20" id="29Y-tw-6br"/>
@@ -210,6 +211,7 @@
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" name="LightYellowColor"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="fjb-81-Je6" secondAttribute="trailing" id="0pi-kn-Izh"/>
                     <constraint firstItem="fjb-81-Je6" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="54L-N7-GdR"/>
