채팅 화면 추가

--- a/YoursMine/YoursMine/MY/MyMain.storyboard
+++ b/YoursMine/YoursMine/MY/MyMain.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8gf-F6-CUK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8gf-F6-CUK">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,18 +15,45 @@
                     <view key="view" contentMode="scaleToFill" id="UBG-g0-AAJ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" name="TextColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v0n-nn-33Z">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" name="LightBackgroundColor"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="VVc-o8-C9r" firstAttribute="bottom" secondItem="v0n-nn-33Z" secondAttribute="bottom" id="E54-bm-Dhu"/>
+                            <constraint firstItem="VVc-o8-C9r" firstAttribute="trailing" secondItem="v0n-nn-33Z" secondAttribute="trailing" id="gyq-rp-M4E"/>
+                            <constraint firstItem="v0n-nn-33Z" firstAttribute="top" secondItem="VVc-o8-C9r" secondAttribute="top" id="oXd-rK-dYU"/>
+                            <constraint firstItem="v0n-nn-33Z" firstAttribute="leading" secondItem="VVc-o8-C9r" secondAttribute="leading" id="uYm-Ao-dE7"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="VVc-o8-C9r"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rCh-uF-gGD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="301" y="-315"/>
+            <point key="canvasLocation" x="298.55072463768118" y="-315.40178571428572"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="l8l-Kp-Vzy">
+            <objects>
+                <viewController id="rAN-jY-mUJ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="09I-54-0Mh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Yx8-jE-bIg"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dfK-20-L5L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1071" y="-315"/>
         </scene>
     </scenes>
     <resources>
-        <namedColor name="TextColor">
-            <color red="0.37299999594688416" green="0.24699999392032623" blue="0.13699999451637268" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="LightBackgroundColor">
+            <color red="0.96470588235294119" green="0.94901960784313721" blue="0.84313725490196079" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
